--- a/springMyBatisMember/pom.xml
+++ b/springMyBatisMember/pom.xml
@@ -97,6 +97,13 @@
 			<groupId>jakarta.servlet.jsp.jstl</groupId>
 			<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
 		</dependency>
+		<!-- AOP를 위한 라이브러리 의존 관계 정의 -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+			<version>3.2.0</version> 
+		</dependency>
 	</dependencies>
 
 	<build>
